--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <service android:name=".MyService" />
 
         <activity android:name=".AlarmStopActivity" />
-        <activity android:name=".AnimationStopActivity"></activity>
+        <activity android:name=".AnimationStopActivity" />
+        <activity android:name=".AboutActivity"></activity>
     </application>
 
 </manifest>
